Closed Bug 1850335 Opened 2 years ago Closed 2 years ago

Google Advanced Search terms not remembered when navigating back after visiting a search result

Categories

(Core :: DOM: Navigation, defect, P2)

Firefox 99
defect

Tracking

()

VERIFIED FIXED
120 Branch
Tracking Status
firefox-esr102 --- disabled
firefox-esr115 --- disabled
firefox117 --- wontfix
firefox118 --- wontfix
firefox119 --- wontfix
firefox120 --- verified
firefox121 --- verified

People

(Reporter: ke5trel, Assigned: peterv)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(2 files)

STR:

  1. Visit https://www.google.com/advanced_search.
  2. Enter search terms into each of the boxes.
  3. Click the "Advanced Search" button at the bottom.
  4. Visit one of the search results.
  5. Press back twice to return to the Advanced Search page.

Expected:
Search terms still remain.

Actual:
Search terms are missing and need to be re-entered.

Does not happen with docshell.shistory.bfcache.ship_allow_beforeunload_listeners = false.

Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e5ebdee1eac6efa37b7e83861bc179b155f98ae4&tochange=967ae1edad41790a5a1fde2f1591731784117c7a

Regressed by Bug 1741671.

Flags: needinfo?(sefeng)

It looks like the form submission ends with a GET request. Unlike we explicitly store postData for POST request, It looks like we do nothing about GET form submission for SHIP. Is this right Peter?

Flags: needinfo?(sefeng) → needinfo?(peterv)
Assignee: nobody → peterv
Status: NEW → ASSIGNED

Setting S2 as it's an obvious behavior regression on a top site. Please feel free to let me know if you don't agree.

Severity: -- → S2
Priority: -- → P2

(In reply to Hsin-Yi Tsai (she/her) [:hsinyi] from comment #2)

Setting S2 as it's an obvious behavior regression on a top site. Please feel free to let me know if you don't agree.

:hsinyi Fx119 goes to beta next week. Do we expect this to be worked on shortly?
Asking since it's an S2, if we can expect something in time for Fx119 release

Flags: needinfo?(htsai)

(In reply to Donal Meehan [:dmeehan|PTO Sept 22-Oct 3] from comment #3)

(In reply to Hsin-Yi Tsai (she/her) [:hsinyi] from comment #2)

Setting S2 as it's an obvious behavior regression on a top site. Please feel free to let me know if you don't agree.

:hsinyi Fx119 goes to beta next week. Do we expect this to be worked on shortly?
Asking since it's an S2, if we can expect something in time for Fx119 release
Yeah, Peter already looked into it a bit, but hasn't figured out yet where the form controls are cleared.

Flags: needinfo?(htsai)

It looks like we're destroying the frame loader while it's in the BFCache. Need to discuss with smaug if that's expected.
If that's expected then we probably need to save the form state at that point.

Flags: needinfo?(peterv)
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/56bf1b814b61 Google Advanced Search terms not remembered when navigating back after visiting a search result. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch

:peterv is this risky to take in a Fx119 dot release or should this ride the train with Fx120?

Flags: needinfo?(peterv)

Reproducible on a 2023-10-15 Nightly build on macOS 12.
Verified as fixed on Firefox 120.0b3 and Nightly 121.0a1 on macOS 12, Windows 10, Ubuntu 22.
Search terms are remembered after navigating back to the Google Advanced Search page.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Clearing NI, this will ride the train with 120

Flags: needinfo?(peterv)
Regressions: 1889406
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: