Bug 1850335 - Google Advanced Search terms not remembered when navigating back after visiting a search result. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D190467